--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/assets/favicon.17e50649.svg" />
+    <link rel="icon" type="image/svg+xml" href="./assets/favicon.17e50649.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-    <script type="module" crossorigin src="/assets/index.5282d271.js"></script>
-    <link rel="stylesheet" href="/assets/index.2c092c83.css">
+    <script type="module" crossorigin src="./assets/index.1c2184e8.js"></script>
+    <link rel="stylesheet" href="./assets/index.2c092c83.css">
   </head>
   <body class="font-inter antialiased bg-gray-900 text-gray-200 tracking-tight">
     <noscript>You need to enable JavaScript to run this app.</noscript>
