--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./assets/favicon.17e50649.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-    <script type="module" crossorigin src="./assets/index.a6340bdf.js"></script>
-    <link rel="stylesheet" href="./assets/index.2c092c83.css">
+    <title>Graphiti - The Future of Trustless AI</title>
+    <script type="module" crossorigin src="./assets/index.c331e44a.js"></script>
+    <link rel="stylesheet" href="./assets/index.8c3176c5.css">
   </head>
-  <body class="font-inter antialiased bg-gray-900 text-gray-200 tracking-tight">
+  <body class="font-inter antialiased bg-sky-50 text-gray-700 tracking-tight selection:text-gray-700 selection:bg-yellow-50">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     
