--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./assets/favicon.30a75042.svg" />
+    <!-- <link rel="icon" type="image/svg+xml" href="/src/favicon.ico" /> -->
+    <link rel="icon" type="image/x-icon" href="./assets/favicon.16f4e36b.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Graphiti - The Future of Trustless AI</title>
-    <script type="module" crossorigin src="./assets/index.f981bc88.js"></script>
-    <link rel="stylesheet" href="./assets/index.b5ac7dcb.css">
+    <script type="module" crossorigin src="./assets/index.92249d02.js"></script>
+    <link rel="stylesheet" href="./assets/index.a546328f.css">
   </head>
   <body class="font-inter antialiased bg-sky-50 text-gray-700 tracking-tight selection:text-gray-700 selection:bg-yellow-50">
     <noscript>You need to enable JavaScript to run this app.</noscript>
